# algebraic-actions

./: algebraic-actions.cabal
lib/: Util.hs
lib/Data/: Action.hs
lib/Group/: Commutator.hs  Cyclic.hs  Dihedral.hs  F4.hs  Free.hs  Klein4.hs  Linear.hs  Permute.hs  Quaternion.hs  Symplectic.hs  Versor.hs
