cabal-version:   3.0
name:            algebraic-actions
version:         0.0.0
author:          Melanie Phoenix Brown
copyright:       2024 Melanie Phoenix Brown
category:        Mathematics
build-type:      Simple
license-file:    LICENSE
license:         BSD-2-Clause
extra-doc-files: CHANGELOG.md
synopsis:
  Concrete implementations of groups acting as modules over other types.
description:
  Concrete implementations of groups acting as modules over other types.

library
  ghc-options:        -Wall
  hs-source-dirs:     lib
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedRecordDot
    PatternSynonyms
    TypeFamilies

  build-depends:
    , base >=4.18 && <5
    , finite-typelits
    , group-theory
    , semirings

  exposed-modules:
    Data.Action
    Group.Cyclic
    Group.Dihedral
